--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "webpack",
     "watch": "webpack --watch",
     "lint": "eslint .",
-    "fix-code": "eslint . --fix"
+    "fix-code": "eslint . --fix",
+    "update-submodules": "git submodule foreach git pull origin master"
   },
   "repository": {
     "type": "git",
