--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
   },
   "homepage": "https://github.com/landswar/game#readme",
   "dependencies": {
+    "i18next": "^8.4.3",
+    "i18next-resource-store-loader": "^0.1.2",
+    "i18next-xhr-backend": "^1.4.2",
     "phaser-ce": "^2.7.3",
     "phaser-kinetic-scrolling-plugin": "^1.0.4",
     "socket.io-client": "^1.7.3"
@@ -37,9 +40,13 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-latest": "^6.22.0",
     "base64-image-loader": "^1.2.0",
+    "bundle-loader": "^0.5.5",
     "copy-webpack-plugin": "^4.0.1",
+    "eslint": "^4.4.1",
+    "eslint-config-lludol": "^0.1.7",
     "html-webpack-include-assets-plugin": "0.0.4",
     "html-webpack-plugin": "^2.28.0",
+    "json-loader": "^0.5.7",
     "loglevel": "^1.4.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
