--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "./public/dist/landswar-game.js",
   "scripts": {
     "start": "webpack-dev-server",
-    "build": "webpack",
+    "build": "NODE_ENV=production webpack",
     "watch": "webpack --watch",
+    "clean": "rimraf ./public/dist",
     "lint": "eslint .",
     "fix-code": "eslint . --fix",
     "update-submodules": "git submodule foreach git pull origin master"
@@ -51,6 +52,7 @@
     "html-webpack-plugin": "^2.28.0",
     "json-loader": "^0.5.7",
     "loglevel": "^1.4.1",
+    "rimraf": "^2.6.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
   }
